--- a/backend/apigateway-service/Jenkinsfile
+++ b/backend/apigateway-service/Jenkinsfile
@@ -108,15 +108,19 @@ pipeline {
 
     post {
         success {
-            if (env.BUILD_REQUIRED == 'true') {
-                mattermostSend(color: 'good', message: "API Gateway 배포 성공.")
-            } else {
-                echo "API Gateway 변경 사항 없음. 빌드 및 배포를 건너뜁니다."
+            script {
+                if (env.BUILD_REQUIRED == 'true') {
+                    mattermostSend(color: 'good', message: "API Gateway 배포 성공.")
+                } else {
+                    echo "API Gateway 변경 사항 없음. 빌드 및 배포를 건너뜁니다."
+                }
             }
         }
         failure {
-            if (env.BUILD_REQUIRED == 'true') {
-                mattermostSend(color: 'danger', message: "API Gateway 배포 실패. 수동 확인이 필요합니다.")
+            script {
+                if (env.BUILD_REQUIRED == 'true') {
+                    mattermostSend(color: 'danger', message: "API Gateway 배포 실패. 수동 확인이 필요합니다.")
+                }
             }
         }
     }
