feat(#S11P31D101-276) : user controller 추가 & eureka user-service 추가

--- a/backend/apigateway-service/src/main/resources/application.yml
+++ b/backend/apigateway-service/src/main/resources/application.yml
@@ -17,6 +17,11 @@ spring:
       mvc:
         routes:
           # TODO : Micro Service ??
+          - id: user-service
+            uri: lb://user-service
+            predicates:
+              - Path=/api/user
+
 management:
   endpoints:
     web:
