fix(#S11P31D101-324) : user service gateway uri 수정

--- a/backend/apigateway-service/src/main/resources/application.yml
+++ b/backend/apigateway-service/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
         routes:
           # TODO : Micro Service ??
           - id: user-service
-            uri: lb://user-service
+            uri: lb://USER-SERVICE
             predicates:
               - Path=/api/user
 
