--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/slider": "^4.5.5",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.1.18",
@@ -29,6 +31,7 @@
     "react-native-keychain": "^9.0.0",
     "react-native-latex": "^0.5.0",
     "react-native-mathjax": "^2.1.2",
+    "react-native-permissions": "^5.1.0",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
