--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,14 +48,19 @@
     "@react-native/eslint-config": "0.75.4",
     "@react-native/metro-config": "0.75.4",
     "@react-native/typescript-config": "0.75.4",
+    "@types/node": "^22.8.4",
     "@types/react": "^18.2.6",
+    "@types/react-native-canvas": "^0.1.13",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/ws": "^8.5.12",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "nodemon": "^3.1.7",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
