--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "pako": "^2.1.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-calendars": "^1.1307.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-config": "^1.5.3",
@@ -53,8 +54,8 @@
     "@react-native/eslint-config": "0.75.4",
     "@react-native/metro-config": "0.75.4",
     "@react-native/typescript-config": "0.75.4",
-    "@types/node": "^22.8.4",
     "@types/lodash": "^4.17.13",
+    "@types/node": "^22.8.4",
     "@types/pako": "^2.0.3",
     "@types/react": "^18.2.6",
     "@types/react-native-canvas": "^0.1.13",
