--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,11 +25,11 @@
     "pako": "^2.1.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-canvas": "^0.1.40",
     "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.20.2",
-    "react-native-gifted-charts": "^1.4.47",
     "react-native-keychain": "^9.0.0",
     "react-native-latex": "^0.5.0",
     "react-native-mathjax": "^2.1.2",
