--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-webview": "^13.12.3",
+    "react-native-wheel-color-picker": "^1.3.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.0"
