--- a/backend/user-service/build.gradle
+++ b/backend/user-service/build.gradle
@@ -50,6 +50,9 @@ dependencies {
 
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	//mail
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 dependencyManagement {
