--- a/backend/user-service/src/main/resources/bootstrap.yml
+++ b/backend/user-service/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 spring:
   cloud:
     config:
-      uri: http://config-service:8888  # Config 서버 URI
+      uri: http://localhost:8888  # Config 서버 URI
       name: eum-user
   profiles:
     active: user
@@ -9,6 +9,6 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://discovery-service:8761/eureka/  # Eureka 서버 URI
+      defaultZone: http://localhost:8761/eureka/  # Eureka 서버 URI
     registerWithEureka: true
     fetchRegistry: true
