--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,7 +8,8 @@
       "@assets/*": ["src/assets/*"],
       "@theme/*": ["src/theme/*"],
       "@utils/*": ["src/utils/*"],
-      "@store/*": ["src/store/*"]
+      "@store/*": ["src/store/*"],
+      "@services/*":["src/services/*"],
     }
   },
   "include": [
