--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-config": "^1.5.3",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-keychain": "^9.0.0",
     "react-native-latex": "^0.5.0",
