refactor(#S11P31D101-298): 환경변수 리팩토링
- yml 로컬환경 테스트 uri 추가
- 젠킨스 파일 빌드 이름 리팩토링
- JpaConfig 빈 등록

--- a/backend/lecture-service/Jenkinsfile
+++ b/backend/lecture-service/Jenkinsfile
@@ -96,16 +96,16 @@ pipeline {
         success {
             script {
                 if (env.BUILD_REQUIRED == 'true') {
-                    mattermostSend(color: 'good', message: "User Service 배포 성공.")
+                    mattermostSend(color: 'good', message: "Lecture Service 배포 성공.")
                 } else {
-                    echo "User Service 변경 사항 없음. 빌드 및 배포를 건너뜁니다."
+                    echo "Lecture Service 변경 사항 없음. 빌드 및 배포를 건너뜁니다."
                 }
             }
         }
         failure {
             script {
                 if (env.BUILD_REQUIRED == 'true') {
-                    mattermostSend(color: 'danger', message: "User Service 배포 실패. 수동 확인이 필요합니다.")
+                    mattermostSend(color: 'danger', message: "Lecture Service 배포 실패. 수동 확인이 필요합니다.")
                 }
             }
         }
