--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "pako": "^2.1.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-base64": "^0.2.1",
     "react-native-calendars": "^1.1307.0",
     "react-native-canvas": "^0.1.40",
     "react-native-chart-kit": "^6.12.0",
@@ -59,6 +60,7 @@
     "@types/node": "^22.8.4",
     "@types/pako": "^2.0.3",
     "@types/react": "^18.2.6",
+    "@types/react-native-base64": "^0.2.2",
     "@types/react-native-canvas": "^0.1.13",
     "@types/react-test-renderer": "^18.0.0",
     "@types/ws": "^8.5.12",
