--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/react-native-skia": "^1.5.0",
+    "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "express": "^4.21.1",
