--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/react-native-skia": "^1.5.0",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -49,6 +50,8 @@
     "react-native-wheel-color-picker": "^1.3.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "sockjs-client": "^1.6.1",
+    "text-encoding": "^0.7.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
@@ -66,6 +69,8 @@
     "@types/react-native-base64": "^0.2.2",
     "@types/react-native-canvas": "^0.1.13",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/text-encoding": "^0.0.39",
     "@types/ws": "^8.5.12",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
