--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-webview": "^13.12.3",
     "react-native-wheel-color-picker": "^1.3.1",
+    "simplify-js": "^1.2.4",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "sockjs-client": "^1.6.1",
