feat(#S11P31D101-505): 알림(Notification) 도커파일, 젠킨스 파일 추가

--- a/backend/notification-service/src/main/resources/bootstrap.yml
+++ b/backend/notification-service/src/main/resources/bootstrap.yml
@@ -3,9 +3,9 @@ spring:
     config:
       uri: http://config-service:8888  # Config 서버 URI
       #uri: http://localhost:8888
-      name: eum-lecture
+      name: eum-notification
   profiles:
-    active: lecture
+    active: notification
 
 eureka:
   client:
