fix(#S11P31D101-444) : todo git ignore 추가

--- a/backend/todo-service/.gitignore
+++ b/backend/todo-service/.gitignore
@@ -26,6 +26,10 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
