--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,13 +33,16 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-config": "^1.5.3",
+    "react-native-document-picker": "^9.3.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-image-picker": "^2.3.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-latex": "^0.5.0",
     "react-native-mathjax": "^2.1.2",
+    "react-native-pager-view": "^6.5.0",
     "react-native-permissions": "^5.1.0",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.11.1",
