docs(#S11P31D101-444) : bootstrap 수정

--- a/backend/todo-service/src/main/resources/bootstrap.yml
+++ b/backend/todo-service/src/main/resources/bootstrap.yml
@@ -2,9 +2,9 @@ spring:
   cloud:
     config:
       uri: http://config-service:8888  # Config 서버 URI
-      name: eum-user
+      name: eum-todo
   profiles:
-    active: user
+    active: todo
 
 eureka:
   client:
