--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-config": "^1.5.3",
+    "react-native-date-picker": "^5.0.7",
     "react-native-document-picker": "^9.3.1",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-fs": "^2.20.0",
