--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-base64": "^0.2.1",
-    "react-native-calendars": "^1.1307.0",
+    "react-native-big-calendar": "^4.15.2",
     "react-native-canvas": "^0.1.40",
     "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
