--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,8 @@
     "@react-native-firebase/app": "^21.4.0",
     "@react-native-firebase/messaging": "^21.4.0",
     "@react-native-picker/picker": "^2.9.0",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/native-stack": "^7.0.3",
     "@shopify/react-native-skia": "^1.5.0",
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.59.19",
@@ -45,15 +45,17 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-latex": "^0.5.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-mathjax": "^2.1.2",
     "react-native-pager-view": "^6.5.0",
     "react-native-permissions": "^5.1.0",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.11.1",
-    "react-native-screens": "^3.34.0",
+    "react-native-screens": "^4.1.0",
     "react-native-svg": "^15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-system-navigation-bar": "^2.6.4",
+    "react-native-toast-message": "^2.2.1",
     "react-native-webview": "^13.12.3",
     "react-native-wheel-color-picker": "^1.3.1",
     "simplify-js": "^1.2.4",
