--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,6 @@
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/geolocation": "^3.4.0",
-    "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-community/slider": "^4.5.5",
     "@react-native-firebase/app": "^21.4.0",
     "@react-native-firebase/messaging": "^21.4.0",
     "@react-native-picker/picker": "^2.9.0",
@@ -27,32 +25,21 @@
     "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
-    "express": "^4.21.1",
-    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "pako": "^2.1.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-base64": "^0.2.1",
-    "react-native-big-calendar": "^4.15.2",
-    "react-native-calendars": "^1.1307.0",
-    "react-native-canvas": "^0.1.40",
-    "react-native-chart-kit": "^6.12.0",
-    "react-native-color-picker": "^0.6.0",
     "react-native-config": "^1.5.3",
     "react-native-date-picker": "^5.0.7",
     "react-native-document-picker": "^9.3.1",
     "react-native-encrypted-storage": "^4.0.3",
-    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-image-picker": "^7.1.2",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-latex": "^0.5.0",
-    "react-native-linear-gradient": "^2.8.3",
     "react-native-mathjax": "^2.1.2",
     "react-native-pager-view": "^6.5.0",
-    "react-native-permissions": "^5.1.0",
     "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "^4.11.1",
+    "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.1.0",
     "react-native-svg": "^15.8.0",
     "react-native-svg-transformer": "^1.5.0",
@@ -60,23 +47,18 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-webview": "^13.12.3",
     "react-native-wheel-color-picker": "^1.3.1",
-    "simplify-js": "^1.2.4",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
     "sockjs-client": "^1.6.1",
     "text-encoding": "^0.7.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.75.4",
     "@react-native/eslint-config": "0.75.4",
     "@react-native/metro-config": "0.75.4",
     "@react-native/typescript-config": "0.75.4",
     "@types/lodash": "^4.17.13",
-    "@types/node": "^22.8.4",
+    "@types/node": "^22.9.0",
     "@types/pako": "^2.0.3",
     "@types/react": "^18.2.6",
     "@types/react-native-base64": "^0.2.2",
@@ -84,15 +66,12 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/sockjs-client": "^1.5.4",
     "@types/text-encoding": "^0.0.39",
-    "@types/ws": "^8.5.12",
-    "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "nodemon": "^3.1.7",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.6.3"
   },
   "engines": {
     "node": ">=18"
